# traccc

./: CMakeLists.txt
core/include/edm/: measurement.hpp
core/include/traccc/clusterization/: clustering_config.hpp  clusterization_algorithm.hpp
core/include/traccc/geometry/: module_map.hpp
device/: CMakeLists.txt
device/common/include/traccc/clusterization/device/: aggregate_cluster.hpp  ccl_kernel.hpp  ccl_kernel_definitions.hpp
device/common/include/traccc/finding/device/: add_links_for_holes.hpp  apply_interaction.hpp  (+3 more)
device/cuda/: CMakeLists.txt
device/cuda/include/cuda/algorithms/: component_connection.hpp
device/cuda/include/traccc/cuda/cca/: component_connection.hpp
device/cuda/include/traccc/cuda/clusterization/: clusterization_algorithm.hpp
device/cuda/include/traccc/cuda/geometry/: module_map.hpp
device/cuda/src/: component_connection.cpp
device/cuda/src/cca/: component_connection.cu
device/cuda/src/clusterization/: clusterization_algorithm.cu
device/cuda/src/details/: sparse_ccl.cu  sparse_ccl.cuh
device/cuda/src/finding/: finding_algorithm.cu
device/sycl/src/clusterization/: clusterization_algorithm.sycl
examples/cpu/: CMakeLists.txt  ccl_example.cpp
examples/run/common/: throughput_st.ipp
examples/run/cuda/: full_chain_algorithm.hpp  seq_example_cuda.cpp
examples/run/sycl/: full_chain_algorithm.hpp  seq_example_sycl.sycl
tests/: CMakeLists.txt
tests/common/tests/: cca_test.hpp
tests/cuda/: CMakeLists.txt  cuda_main.cpp  test_cca.cpp  test_module_map.cu
tests/sycl/: test_kalman_fitter_telescope.sycl
(+9 files in other folders)
